增加新的olap子模块